@@ -5,7 +5,6 @@ animation{
     { x = 216, y = 72, frame_width = 24, frame_height = 24, origin_x = 12, origin_y = 23 },
     { x = 240, y = 72, frame_width = 24, frame_height = 24, origin_x = 12, origin_y = 23 },
     { x = 264, y = 72, frame_width = 24, frame_height = 24, origin_x = 12, origin_y = 23 },
-    { x = 288, y = 72, frame_width = 24, frame_height = 24, origin_x = 12, origin_y = 23 },
   },
 }
 animation{
