@@ -22,6 +22,7 @@ Engine changes
 * Improve the performance of collisions by using a quadtree.
 * Entities far from the camera are no longer suspended.
 * Destinations can now set to update or not the starting location (#819).
+* Fix crash with missing directions in sprites controlled by the engine (#864).
 * Fix sprite:on_animation_finished() and others not working sometimes (#799).
 * Fix sol.input.get_mouse_coordinates() (#734).
 * Fix straight movement precision.
